--- a/plugins/index.html.erb
+++ b/plugins/index.html.erb
@@ -21,7 +21,7 @@
 
         <ul class="simple">
         <% categories.each do |category,gems| %>
-          <li><a class="reference internal" href="#<%= category.gsub(/[^a-zA-Z0-9]/, '-') %>"><%= category.capitalize %></a></li>
+          <li><a class="reference internal" href="#<%= category.gsub(/[^a-zA-Z0-9]/, '-') %>"><%= category.capitalize %> plugin</a></li>
         <% end %>
         </ul>
 
